[project]
name = "mindlogger-data-export"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gabriel Schubiner", email = "gabriel.schubiner@childmind.org" },
]
requires-python = ">=3.12"
dependencies = [
    "packaging>=24.2",
    "polars>=1.17.1",
    "tyro>=0.9.5",
]

[project.scripts]
mindlogger-data-export = "mindlogger_data_export:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.mypy]
ignore_missing_imports = true
plugins = ["numpy.typing.mypy_plugin"]

[tool.ruff.lint]
extend-select = [
    "A",
    "ARG",
    "B",
    "C4",
    "C90",
    "COM",
    "D",
    "ERA",
    "FA",
    "FBT",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "S",
    "T20",
    "TRY",
    "UP",
]

extend-ignore = [
    "COM812",
    "COM819",
    "D203",
    "D206",
    "D213",
    "D300",
    "ISC001",
    "ISC002",
    "TRY003",
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["S101", "SLF001", "INP001"]
"scripts/*.py" = ["T20"]

[tool.ruff.lint.pydocstyle]
convention = "google"
